Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -27,14 +27,13 @@
 
 \noindent\rule{6.7in}{0.4pt}
 
-\textbf{ -Affiliation:} CEA \textbf{ -DOB:} March 28, 1987 \textbf{ -Contact:} leventsagun@gmail.com
+\textbf{ Affiliation:} EPFL \textbf{ DOB:} March 28, 1987 \textbf{ Contact:} leventsagun@gmail.com
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Research Interests}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item Probability theory, statistical physics, and their applications on deep learning. \\ 
-Applications of machine learning in social sciences and legal studies.
+\item Probability theory, statistical physics, and their applications on deep learning. \\ Statistical and geometric properties of loss functions in machine learning.
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -42,13 +41,13 @@ Applications of machine learning in social sciences and legal studies.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 \item \textbf{2011 - 2017 } Ph.D. in Mathematics, Courant Institute of Mathematical Sciences, New York University \\ 
-  \hspace*{2cm} \textit{Thesis title: }{Explorations on High Dimensional Landscapes: Spin Glasses and Deep Learning} \\
-  \hspace*{2cm} \textit{Academic advisors: }{G\'erard Ben Arous and Yann LeCun}
+  \hspace*{2cm} \textit{ Thesis title: }{Explorations on High Dimensional Landscapes: Spin Glasses and Deep Learning} \\
+  \hspace*{2cm} \textit{ Academic advisors: }{G\'erard Ben Arous and Yann LeCun}
 
 \item \textbf{2006 - 2011 } B.S. in Mathematics, Bo\u{g}azi\c{c}i University, Istanbul, Turkey \\
     %\textit{-GPA:} 3.92 - rank 1$^{st}$, \\
     %\textit{-Double Major:} Physics - rank 1$^{st}$ \\
-    \hspace*{2cm} \textit{Exchange program: }{Columbia University, New York, Fall 2009} %, \textit{SPA:} 4.04
+    \hspace*{2cm} \textit{ Exchange program: }{Columbia University, New York, Fall 2009} %, \textit{SPA:} 4.04
  
 \item \textbf{2001 - 2006 } High School, \.{I}stanbul Lisesi, Istanbul, Turkey%(with High Honors degree)
 
@@ -59,10 +58,10 @@ Applications of machine learning in social sciences and legal studies.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 \item \textbf{2018 - 2019 } Postdoctoral Fellow, \'Ecole Polytechnique F\'ed\'erale de Lausanne, Switzerland \\ 
-\hspace*{2cm} \textit{Simons Collaboration on Cracking the Glass Problem}
+\hspace*{2cm} \textit{ Simons Collaboration on Cracking the Glass Problem}
 
 \item \textbf{2017 - 2018 } Postdoctoral Fellow, \'Ecole Normale Sup\'erieure Paris \& CEA Saclay, France \\ 
-\hspace*{2cm} \textit{Simons Collaboration on Cracking the Glass Problem}
+\hspace*{2cm} \textit{ Simons Collaboration on Cracking the Glass Problem}
 
 \item \textbf{2015 - 2016 } Teaching Assistant, Center for Data Science, New York University
 
@@ -74,7 +73,7 @@ Applications of machine learning in social sciences and legal studies.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 \item \textbf{2016 - 2017 } Research Intern and Contractor, Facebook AI Research, New York \\ 
-\hspace*{2cm} \textit{Manager: }{L\'eon Bottou}
+\hspace*{2cm} \textit{ Manager: }{L\'eon Bottou}
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Papers}
@@ -86,15 +85,14 @@ Applications of machine learning in social sciences and legal studies.
 
 \item Levent Sagun, Utku Evci, V. U\u{g}ur G\"uney, Yann Dauphin, L\'eon Bottou. Empirical Analysis of the Hessian of Over-Parametrized Neural Networks. ICLR 2018 Workshop Poster, 2017.
 
-% \item Levent Sagun. Explorations on High Dimensional Landscapes: Spin Glasses and Deep Learning. \textit{Ph.D. Thesis}, Courant Institute of Mathematical Sciences, 2017
-
 \item Andrew J. Ballard, Ritankar Das, Stefano Martiniani, Dhagash Mehta, Levent Sagun, Jacob D. Stevenson, David J. Wales. Perspective: Energy Landscapes for Machine Learning. \textit{Phys. Chem. Chem. Phys.}, \textbf{19}, 12585-12603, 2017.
-
-\item Pratik Chaudhari, Anna Choromanska, Stefano Soatto, Yann LeCun, Carlo Baldassi, Christian Borgs, Jennifer Chayes, Levent Sagun, Riccardo Zecchina. Entropy-SGD: Biasing Gradient Descent Into Wide Valleys. ICLR 2017 Conference Poster, 2016.
 
 \item Matthew Dunn, Levent Sagun, Hale \c{S}irin, Daniel Chen. Early Predictability of Asylum Court Decisions. ML and the Law, ICAIL Pages 233-236, 2017.
 
-\item  Levent Sagun, Thomas Trogdon, Yann LeCun. Universal halting times in optimization and machine learning. \textit{Quart. Appl. Math.}, \textbf{76} (2018), \textit{289-301}, 2016.
+\item Pratik Chaudhari, Anna Choromanska, Stefano Soatto, Yann LeCun, Carlo Baldassi, Christian Borgs, Jennifer Chayes, Levent Sagun, Riccardo Zecchina. Entropy-SGD: Biasing Gradient Descent Into Wide Valleys. ICLR 2017 Conference Poster, 2016.
+
+\item  Levent Sagun, Thomas Trogdon, Yann LeCun. Universal halting times in optimization and machine learning. \textit{Quart. Appl. Math.}, \textbf{76} (2018), \textit{289-301} (also appeared at ICML 2016 Optimization Workshop as a Spotlight Poster), 2016.
+
 % \item  Levent Sagun, Thomas Trogdon, Yann LeCun. Universality in halting time and its applications in optimization. ICML Optimization Workshop Spotlight Poster Session, 2016.
 
 \item  Levent Sagun, U\u{g}ur G\"uney, G\'erard Ben Arous, Yann LeCun. Explorations on high dimensional landscapes. ICLR Workshop Poster, 2015.
@@ -103,6 +101,8 @@ Applications of machine learning in social sciences and legal studies.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Preprints}
 \begin{itemize}
+
+\item Mario Geiger, Stefano Spigler, St\'ephane d'Ascoli, Levent Sagun, Marco Baity-Jesi, Giulio Biroli, Matthieu Wyart. The jamming transition as a paradigm to understand the loss landscape of deep neural networks. Preprint, available at arXiv:1809.09349, 2018.
 
 \item Matthew Dunn, Levent Sagun, Mike Higgins, Ugur Guney, Volkan Cirik, Kyunghyun Cho. SearchQA: A New Q\&A Dataset Augmented with Context from a Search Engine. Preprint, available at arXiv:1704.05179, 2017.
 
@@ -114,7 +114,8 @@ Applications of machine learning in social sciences and legal studies.
 \section*{Talks and Presentations}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item Over-parametrization in Deep Learning, Institut f\"ur Theoretische Physik, Heidelberg, July 2018 \\
+\item An empirical look at the loss landscape: shape, dynamics, and loose ends, Statistical Physics and Machine Learning back together, Institut d'\'Etudes Scientifiques de Carg\`ese, Corsica, August 2018 \\
+Over-parametrization in Deep Learning, Institut f\"ur Theoretische Physik, Heidelberg, July 2018 \\
 Easing non-convex optimization with neural networks, ICLR 2018 Poster, May 2018 \\
 Empirical Analysis of the Hessian of Over-Parametrized Neural Networks, ICLR 2018 Poster, May 2018 \\
 Shape and Dynamics of the Loss Landscape, CILVR Lab Meetings, NYU, New York, April 2018 \\
@@ -141,29 +142,23 @@ Conjugate Gradient Method, Student Seminars in Mathematics and Physics, Bo\u{g}a
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-% \section*{Professional Activities}
-% \begin{itemize}
-%     \item Reviewing service for the following venues: \\
-%     ICLR \\
-%     JMLR \\
-%     SIAM Journal \\
-%     COLT \\
-%     Deep Learning for Physical Sciences \\
-%     Cambridge University Press \\
-%     NIPS??? check these... or ICML???
-% \end{itemize}
+\section*{Reviewer duties}
+\begin{itemize}
+    \item ICLR, JMLR,  COLT, NIPS, TPAMI, SIAM Journal, Cambridge University Press
+\end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Educational Experience}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item Machine Learning Summer School, University of Kyoto, September 2015 \\ 
+\item Deep Learning and Statistical Physics, Beg Rohu Summer School, June 2018 \\
+Machine Learning Summer School, University of Kyoto, September 2015 \\ 
 Deep Learning Summer School, University of Montreal, August 2015 \\ 
-International Conference on Learning Representations, San Diego, May 2015 \\ 
+% International Conference on Learning Representations, San Diego, May 2015 \\ 
 CIFAR Neural Computation \& Adaptive Perception Summer School, University of Toronto, August 2014 \\ 
 Workshop on Stochastic Gradient Methods, IPAM, February 2014 \\ 
 St. Petersburg School in Probability and Statistical Physics, Chebyshev Laboratory, June 2012 \\ 
-Workshop on Random Media: Homogenization and Beyond, IPAM, January 2011 \\ 
+% Workshop on Random Media: Homogenization and Beyond, IPAM, January 2011 \\ 
 Minicourse on Compressed Sensing by Emmanuel Cand\`{e}s, University of Cambridge, March 2011 \\ 
 Summer School on Complex Systems, Institute for Theoretical and Applied Physics, Summer 2010 \\ 
 Summer School on Computational Solution of Inverse Problems, Helsinki University, Summer 2010 \\ 
@@ -205,10 +200,10 @@ Silver Medal, 5$^{th}$ National Mathematical Olympiads for Junior High School St
 %\section*{References (Prior to PhD)}
 
 % Footer
-\begin{center}
-  \begin{footnotesize}
-    Last updated: \today
-  \end{footnotesize}
-\end{center}
+% \begin{center}
+%   \begin{footnotesize}
+%     Last updated: \today
+%   \end{footnotesize}
+% \end{center}
 
 \end{document}
