Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -104,14 +104,23 @@
 
 \item Mario Geiger, Stefano Spigler, St\'ephane d'Ascoli, Levent Sagun, Marco Baity-Jesi, Giulio Biroli, Matthieu Wyart. The jamming transition as a paradigm to understand the loss landscape of deep neural networks. Preprint, available at arXiv:1809.09349, 2018.
 
-\item Matthew Dunn, Levent Sagun, Mike Higgins, Ugur Guney, Volkan Cirik, Kyunghyun Cho. SearchQA: A New Q\&A Dataset Augmented with Context from a Search Engine. Preprint, available at arXiv:1704.05179, 2017.
+\item Matthew Dunn, Levent Sagun, Mike Higgins, U\u{g}ur G\"uney, Volkan Cirik, Kyunghyun Cho. SearchQA: A New Q\&A Dataset Augmented with Context from a Search Engine. Preprint, available at arXiv:1704.05179, 2017.
 
 \item Levent Sagun, L\'eon Bottou, Yann LeCun. Eigenvalues of the Hessian in Deep Learning: Singularity and Beyond. Preprint, available at arXiv:1611.07476, 2017.
 \end{itemize}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\section*{Reviewer duties}
+\begin{itemize}
+    \item ICLR, JMLR,  COLT, NIPS, TPAMI, SIAM Journal, Cambridge University Press
+\end{itemize}
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Talks and Presentations}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 \item An empirical look at the loss landscape: shape, dynamics, and loose ends, Statistical Physics and Machine Learning back together, Institut d'\'Etudes Scientifiques de Carg\`ese, Corsica, August 2018 \\
@@ -141,14 +150,9 @@ Insight into Theory of Large Deviations, Department of Mathematics, Bo\u{g}azi\c
 Conjugate Gradient Method, Student Seminars in Mathematics and Physics, Bo\u{g}azi\c{c}i University, April 2010
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-\section*{Reviewer duties}
-\begin{itemize}
-    \item ICLR, JMLR,  COLT, NIPS, TPAMI, SIAM Journal, Cambridge University Press
-\end{itemize}
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Educational Experience}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 \item Deep Learning and Statistical Physics, Beg Rohu Summer School, June 2018 \\
