Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -102,6 +102,8 @@
 \section*{Preprints}
 \begin{itemize}
 
+\item Stefano Spigler, Mario Geiger, St\'ephane d'Ascoli, Levent Sagun, Giulio Biroli, Matthieu Wyart. A jamming transition from under- to over-parametrization affects loss landscape and generalization. Preprint, available at arXiv:1810.09665, 2018.
+
 \item Mario Geiger, Stefano Spigler, St\'ephane d'Ascoli, Levent Sagun, Marco Baity-Jesi, Giulio Biroli, Matthieu Wyart. The jamming transition as a paradigm to understand the loss landscape of deep neural networks. Preprint, available at arXiv:1809.09349, 2018.
 
 \item Matthew Dunn, Levent Sagun, Mike Higgins, U\u{g}ur G\"uney, Volkan Cirik, Kyunghyun Cho. SearchQA: A New Q\&A Dataset Augmented with Context from a Search Engine. Preprint, available at arXiv:1704.05179, 2017.
