Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -58,10 +58,10 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 \item \textbf{2018 - 2019 } Postdoctoral Fellow, \'Ecole Polytechnique F\'ed\'erale de Lausanne, Switzerland \\ 
-\hspace*{2cm} \textit{ Simons Collaboration on Cracking the Glass Problem}
+\hspace*{2cm} \textit{ Simons Collaboration on Cracking the Glass Problem - Part II}
 
 \item \textbf{2017 - 2018 } Postdoctoral Fellow, \'Ecole Normale Sup\'erieure Paris \& CEA Saclay, France \\ 
-\hspace*{2cm} \textit{ Simons Collaboration on Cracking the Glass Problem}
+\hspace*{2cm} \textit{ Simons Collaboration on Cracking the Glass Problem - Part I}
 
 \item \textbf{2015 - 2016 } Teaching Assistant, Center for Data Science, New York University
 
@@ -79,6 +79,8 @@
 \section*{Papers}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
+\item Stefano Spigler, Mario Geiger, St\'ephane d'Ascoli, Levent Sagun, Giulio Biroli, Matthieu Wyart. A jamming transition from under- to over-parametrization affects loss landscape and generalization. Integration of Deep Learning Theories, NIPS 2018 Workshop, arXiv:1810.09665, 2018.
+
 \item David Lopez-Paz, Levent Sagun. Easing non-convex optimization with neural networks. ICLR 2018 Workshop Poster, 2018.
 
 \item Marco Baity-Jesi, Levent Sagun, Mario Geiger, Stefano Spigler, G\'erard Ben Arous, Chiara Cammarota, Yann LeCun, Matthieu Wyart, Giulio Biroli. Comparing Dynamics: Deep Neural Networks versus Glassy Systems. ICML 2018 Conference Paper, 2018.
@@ -101,8 +103,6 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Preprints}
 \begin{itemize}
-
-\item Stefano Spigler, Mario Geiger, St\'ephane d'Ascoli, Levent Sagun, Giulio Biroli, Matthieu Wyart. A jamming transition from under- to over-parametrization affects loss landscape and generalization. Preprint, available at arXiv:1810.09665, 2018.
 
 \item Mario Geiger, Stefano Spigler, St\'ephane d'Ascoli, Levent Sagun, Marco Baity-Jesi, Giulio Biroli, Matthieu Wyart. The jamming transition as a paradigm to understand the loss landscape of deep neural networks. Preprint, available at arXiv:1809.09349, 2018.
 
@@ -157,7 +157,8 @@ Conjugate Gradient Method, Student Seminars in Mathematics and Physics, Bo\u{g}a
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item Deep Learning and Statistical Physics, Beg Rohu Summer School, June 2018 \\
+\item Statistical Physics and Machine Learning back together, Institut d'\'Etudes Scientifiques de Carg\`ese, Corsica, August 2018 \\
+Deep Learning and Statistical Physics, Beg Rohu Summer School, June 2018 \\
 Machine Learning Summer School, University of Kyoto, September 2015 \\ 
 Deep Learning Summer School, University of Montreal, August 2015 \\ 
 % International Conference on Learning Representations, San Diego, May 2015 \\ 
@@ -202,14 +203,34 @@ Honorable Mention, 9$^{th}$ National Mathematical Olympiads, Akdeniz University,
 Silver Medal, 5$^{th}$ National Mathematical Olympiads for Junior High School Students, T\"{U}B\.{I}TAK, 2001
 \end{itemize}
 
+\section*{References}
+
+\begin{itemize}
+
+\item \textbf{G\'erard Ben Arous} - \url{benarous@cims.nyu.edu} \\
+Professor of Mathematics, Courant Institute of Mathematical Sciences, NYU \\
+Associate Provost for the Quantitative Disciplines, Global Network Professor of Mathematics, NYU Shanghai \\
+\textit{Relationship:} PhD thesis advisor
+
+\item \textbf{Giulio Biroli} - \url{giulio.biroli@ens.fr} \\
+Professor of Theoretical Physics \\
+Laboratoire de Physique Statistique, \'Ecole Normale Sup\'erieure, PSL Research University, Paris, France \\
+\textit{Relationship:} Postdoc advisor
+
+\item \textbf{L\'eon Bottou} - \url{leonb@fb.com} \\
+Research Lead, Facebook AI Research, New York \\
+Visiting Research Professor, Computer Science Department, NYU \\
+\textit{Relationship:} Manager at FAIR and PhD thesis co-advisor
+
+\end{itemize}
+
 % \subsubsection*{Contact}
-%\section*{References (Prior to PhD)}
 
 % Footer
-% \begin{center}
-%   \begin{footnotesize}
-%     Last updated: \today
-%   \end{footnotesize}
-% \end{center}
+\begin{center}
+  \begin{footnotesize}
+    Last updated: \today
+  \end{footnotesize}
+\end{center}
 
 \end{document}
