Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -79,25 +79,25 @@
 \section*{Papers}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item Stefano Spigler, Mario Geiger, St\'ephane d'Ascoli, Levent Sagun, Giulio Biroli, Matthieu Wyart. A jamming transition from under- to over-parametrization affects loss landscape and generalization. Integration of Deep Learning Theories, NIPS 2018 Workshop, arXiv:1810.09665, 2018.
+\item Stefano Spigler, Mario Geiger, St\'ephane d'Ascoli, Levent Sagun, Giulio Biroli, Matthieu Wyart. A jamming transition from under- to over-parametrization affects loss landscape and generalization. Integration of Deep Learning Theories Workshop at NIPS, 2018.
 
-\item David Lopez-Paz, Levent Sagun. Easing non-convex optimization with neural networks. ICLR 2018 Workshop Poster, 2018.
+\item David Lopez-Paz, Levent Sagun. Easing non-convex optimization with neural networks. Workshop Track at ICLR, 2018.
 
-\item Marco Baity-Jesi, Levent Sagun, Mario Geiger, Stefano Spigler, G\'erard Ben Arous, Chiara Cammarota, Yann LeCun, Matthieu Wyart, Giulio Biroli. Comparing Dynamics: Deep Neural Networks versus Glassy Systems. ICML 2018 Conference Paper, 2018.
+\item Marco Baity-Jesi, Levent Sagun, Mario Geiger, Stefano Spigler, G\'erard Ben Arous, Chiara Cammarota, Yann LeCun, Matthieu Wyart, Giulio Biroli. Comparing Dynamics: Deep Neural Networks versus Glassy Systems. Conference Paper at ICML, 2018.
 
-\item Levent Sagun, Utku Evci, V. U\u{g}ur G\"uney, Yann Dauphin, L\'eon Bottou. Empirical Analysis of the Hessian of Over-Parametrized Neural Networks. ICLR 2018 Workshop Poster, 2017.
+\item Levent Sagun, Utku Evci, V. U\u{g}ur G\"uney, Yann Dauphin, L\'eon Bottou. Empirical Analysis of the Hessian of Over-Parametrized Neural Networks. Workshop Track at ICLR, 2018.
+
+\item  Levent Sagun, Thomas Trogdon, Yann LeCun. Universal halting times in optimization and machine learning. Optimization Workshop at ICML, 2016; and \textit{Quart. Appl. Math.}, \textbf{76}, \textit{289-301}, 2018.
 
 \item Andrew J. Ballard, Ritankar Das, Stefano Martiniani, Dhagash Mehta, Levent Sagun, Jacob D. Stevenson, David J. Wales. Perspective: Energy Landscapes for Machine Learning. \textit{Phys. Chem. Chem. Phys.}, \textbf{19}, 12585-12603, 2017.
 
 \item Matthew Dunn, Levent Sagun, Hale \c{S}irin, Daniel Chen. Early Predictability of Asylum Court Decisions. ML and the Law, ICAIL Pages 233-236, 2017.
 
-\item Pratik Chaudhari, Anna Choromanska, Stefano Soatto, Yann LeCun, Carlo Baldassi, Christian Borgs, Jennifer Chayes, Levent Sagun, Riccardo Zecchina. Entropy-SGD: Biasing Gradient Descent Into Wide Valleys. ICLR 2017 Conference Poster, 2016.
-
-\item  Levent Sagun, Thomas Trogdon, Yann LeCun. Universal halting times in optimization and machine learning. \textit{Quart. Appl. Math.}, \textbf{76} (2018), \textit{289-301} (also appeared at ICML 2016 Optimization Workshop as a Spotlight Poster), 2016.
+\item Pratik Chaudhari, Anna Choromanska, Stefano Soatto, Yann LeCun, Carlo Baldassi, Christian Borgs, Jennifer Chayes, Levent Sagun, Riccardo Zecchina. Entropy-SGD: Biasing Gradient Descent Into Wide Valleys. Conference Track at ICLR, 2017.
 
 % \item  Levent Sagun, Thomas Trogdon, Yann LeCun. Universality in halting time and its applications in optimization. ICML Optimization Workshop Spotlight Poster Session, 2016.
 
-\item  Levent Sagun, U\u{g}ur G\"uney, G\'erard Ben Arous, Yann LeCun. Explorations on high dimensional landscapes. ICLR Workshop Poster, 2015.
+\item  Levent Sagun, U\u{g}ur G\"uney, G\'erard Ben Arous, Yann LeCun. Explorations on high dimensional landscapes. Workshop Track at ICLR, 2015.
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
