Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -205,6 +205,8 @@ Silver Medal, 5$^{th}$ National Mathematical Olympiads for Junior High School St
 
 \section*{References}
 
+\subsection*{Research}
+
 \begin{itemize}
 
 \item \textbf{G\'erard Ben Arous} - \url{benarous@cims.nyu.edu} \\
@@ -221,6 +223,17 @@ Laboratoire de Physique Statistique, \'Ecole Normale Sup\'erieure, PSL Research 
 Research Lead, Facebook AI Research, New York \\
 Visiting Research Professor, Computer Science Department, NYU \\
 \textit{Relationship:} Manager at FAIR and PhD thesis co-advisor
+
+\end{itemize}
+
+\subsection*{Teaching}
+
+\begin{itemize}
+
+\item \textbf{Carlos Fernandez-Granda} - \url{cfgranda@cims.nyu.edu} \\
+Assistant Professor of Mathematics and Data Science \\
+Courant Institute of Mathematical Science and Center for Data Science NYU \\
+\textit{Relationship:} I have been his teaching assistant at the Center for Data Science
 
 \end{itemize}
 
