Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -79,7 +79,7 @@
 \section*{Papers}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item Stefano Spigler, Mario Geiger, St\'ephane d'Ascoli, Levent Sagun, Giulio Biroli, Matthieu Wyart. A jamming transition from under- to over-parametrization affects loss landscape and generalization. Integration of Deep Learning Theories Workshop at NIPS, 2018.
+\item Stefano Spigler, Mario Geiger, St\'ephane d'Ascoli, Levent Sagun, Giulio Biroli, Matthieu Wyart. A jamming transition from under- to over-parametrization affects loss landscape and generalization. Integration of Deep Learning Theories Workshop at NeurIPS, 2018.
 
 \item David Lopez-Paz, Levent Sagun. Easing non-convex optimization with neural networks. Workshop Track at ICLR, 2018.
 
@@ -116,7 +116,7 @@
 
 \section*{Reviewer duties}
 \begin{itemize}
-    \item ICLR, JMLR,  COLT, NIPS, TPAMI, SIAM Journal, Cambridge University Press
+    \item ICLR, JMLR, COLT, NeurIPS, TPAMI, SIAM Journal, Cambridge University Press
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -125,7 +125,11 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item An empirical look at the loss landscape: shape, dynamics, and loose ends, Statistical Physics and Machine Learning back together, Institut d'\'Etudes Scientifiques de Carg\`ese, Corsica, August 2018 \\
+\item A jamming transition from under- to over-parametrization affects loss landscape and generalization, NeurIPS Workshop on Integration of Deep Learning Theories, Montreal, December 2018 \\
+Over-paramertrization in NNs: observations and a definition, Google Brain, Montreal, November 2018 \\
+Over-paramertrization in NNs: observations and a definition, FAIR, Montreal, November 2018 \\
+Over-paramertrization in NNs: observations and a definition, MILA, Montreal, November 2018 \\
+An empirical look at the loss landscape: shape, dynamics, and loose ends, Statistical Physics and Machine Learning back together, Institut d'\'Etudes Scientifiques de Carg\`ese, Corsica, August 2018 \\
 Over-parametrization in Deep Learning, Institut f\"ur Theoretische Physik, Heidelberg, July 2018 \\
 Easing non-convex optimization with neural networks, ICLR 2018 Poster, May 2018 \\
 Empirical Analysis of the Hessian of Over-Parametrized Neural Networks, ICLR 2018 Poster, May 2018 \\
