Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -46,7 +46,7 @@
 
 \item \textbf{2006 - 2011 } B.S. in Mathematics, Bo\u{g}azi\c{c}i University, Istanbul, Turkey \\
     %\textit{-GPA:} 3.92 - rank 1$^{st}$, \\
-    %\textit{-Double Major:} Physics - rank 1$^{st}$ \\
+    \hspace*{2cm} \textit{ Double Major:} Physics \\ %- rank 1$^{st}$ \\
     \hspace*{2cm} \textit{ Exchange program: }{Columbia University, New York, Fall 2009} %, \textit{SPA:} 4.04
  
 \item \textbf{2001 - 2006 } High School, \.{I}stanbul Lisesi, Istanbul, Turkey%(with High Honors degree)
