Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -46,8 +46,9 @@
 
 \item \textbf{2006 - 2011 } B.S. in Mathematics, Bo\u{g}azi\c{c}i University, Istanbul, Turkey \\
     %\textit{-GPA:} 3.92 - rank 1$^{st}$, \\
-    \hspace*{2cm} \textit{ Double Major:} Physics \\ %- rank 1$^{st}$ \\
-    \hspace*{2cm} \textit{ Exchange program: }{Columbia University, New York, Fall 2009} %, \textit{SPA:} 4.04
+    \hspace*{2cm} \textit{ Double major:} B.S. in Physics \\ 
+    \hspace*{2cm} \textit{ Exchange program: }{Columbia University, New York, Fall 2009} \\ %, \textit{SPA:} 4.04
+    \hspace*{2cm} \textit{ Graduated first rank in the Faculty of Arts and Sciences, Class of 2011}
  
 \item \textbf{2001 - 2006 } High School, \.{I}stanbul Lisesi, Istanbul, Turkey%(with High Honors degree)
 
@@ -73,6 +74,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 \item \textbf{2016 - 2017 } Research Intern and Contractor, Facebook AI Research, New York \\ 
+\hspace*{2cm} \textit{ Project: }{Local geometry of solutions \& effects of noisy algorithms in deep learning.} \\
 \hspace*{2cm} \textit{ Manager: }{L\'eon Bottou}
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
