Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -33,7 +33,7 @@
 \section*{Research Interests}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item Probability theory, statistical physics, and their applications on deep learning. \\ Statistical and geometric properties of loss functions in machine learning.
+\item Probability theory, statistical physics, and their applications on deep learning. Statistical and geometric properties of loss functions in machine learning. The effects and implications of theoretical results to problems that arise in large-scale models and complex datasets.
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -74,13 +74,13 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 \item \textbf{2016 - 2017 } Research Intern and Contractor, Facebook AI Research, New York \\ 
-\hspace*{2cm} \textit{ Project: }{Local geometry of solutions \& effects of noisy algorithms in deep learning.} \\
+\hspace*{2cm} \textit{ Project: }{Local geometry of solutions and effects of noisy algorithms in deep learning.} \\
 \hspace*{2cm} \textit{ Manager: }{L\'eon Bottou}
 \end{itemize}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Papers}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{itemize}
+\begin{enumerate}
 \item Stefano Spigler, Mario Geiger, St\'ephane d'Ascoli, Levent Sagun, Giulio Biroli, Matthieu Wyart. A jamming transition from under- to over-parametrization affects loss landscape and generalization. Integration of Deep Learning Theories Workshop at NeurIPS, 2018.
 
 \item David Lopez-Paz, Levent Sagun. Easing non-convex optimization with neural networks. Workshop Track at ICLR, 2018.
@@ -100,18 +100,20 @@
 % \item  Levent Sagun, Thomas Trogdon, Yann LeCun. Universality in halting time and its applications in optimization. ICML Optimization Workshop Spotlight Poster Session, 2016.
 
 \item  Levent Sagun, U\u{g}ur G\"uney, G\'erard Ben Arous, Yann LeCun. Explorations on high dimensional landscapes. Workshop Track at ICLR, 2015.
-\end{itemize}
+\end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section*{Preprints}
-\begin{itemize}
+\begin{enumerate}
+
+\item Mario Geiger, Arthur Jacot, Stefano Spigler, Franck Gabriel, Levent Sagun, St\'ephane d'Ascoli, Giulio Biroli, Cl\'ement Hongler, Matthieu Wyart. Scaling description of generalization with number of parameters in deep learning. Preprint, available at arXiv:1901.01608, 2019.
 
 \item Mario Geiger, Stefano Spigler, St\'ephane d'Ascoli, Levent Sagun, Marco Baity-Jesi, Giulio Biroli, Matthieu Wyart. The jamming transition as a paradigm to understand the loss landscape of deep neural networks. Preprint, available at arXiv:1809.09349, 2018.
 
 \item Matthew Dunn, Levent Sagun, Mike Higgins, U\u{g}ur G\"uney, Volkan Cirik, Kyunghyun Cho. SearchQA: A New Q\&A Dataset Augmented with Context from a Search Engine. Preprint, available at arXiv:1704.05179, 2017.
 
 \item Levent Sagun, L\'eon Bottou, Yann LeCun. Eigenvalues of the Hessian in Deep Learning: Singularity and Beyond. Preprint, available at arXiv:1611.07476, 2017.
-\end{itemize}
+\end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -185,7 +187,7 @@ Independent Study on Dynamical Systems, Bo\u{g}azi\c{c}i University, Summer 2009
 \begin{itemize}
 \item Recitation leader, Statistical and Mathematical Methods, NYU - Center for Data Science, Fall 2016 \\ 
 Recitation leader, Theory of Probability, Courant Institute, Fall 2016 \\ 
-Recitation leader, Machine Learning, NYU - Center for Data Science, Fall 2015 \\ 
+Recitation leader, Machine Learning, NYU - Center for Data Science, Spring 2016 \\ 
 Recitation leader, Statistical and Mathematical Methods, NYU - Center for Data Science, Fall 2015 \\ 
 Recitation leader, Probability and Statistics, Courant Institute, Spring 2015 \\ 
 Recitation leader, Theory of Probability, Courant Institute, Fall 2014 \\ 
