Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -129,7 +129,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item A jamming transition from under- to over-parametrization affects loss landscape and generalization, NeurIPS Workshop on Integration of Deep Learning Theories, Montreal, December 2018 \\
+\item Over-paramertrization in NNs: observations and a definition, Theoretical Physics for Machine Learning, Aspen Center for Physics, January 2019 \\
+A jamming transition from under- to over-parametrization affects loss landscape and generalization, NeurIPS Workshop on Integration of Deep Learning Theories, Montreal, December 2018 \\
 Over-paramertrization in NNs: observations and a definition, Google Brain, Montreal, November 2018 \\
 Over-paramertrization in NNs: observations and a definition, FAIR, Montreal, November 2018 \\
 Over-paramertrization in NNs: observations and a definition, MILA, Montreal, November 2018 \\
