Updates from ShareLaTeX

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -106,6 +106,8 @@
 \section*{Preprints}
 \begin{enumerate}
 
+\item Umut Simsekli, Levent Sagun, Mert Gurbuzbalaban. A Tail-Index Analysis of Stochastic Gradient Noise in Deep Neural Networks. Preprint, available at arXiv:1901.06053, 2019.
+
 \item Mario Geiger, Arthur Jacot, Stefano Spigler, Franck Gabriel, Levent Sagun, St\'ephane d'Ascoli, Giulio Biroli, Cl\'ement Hongler, Matthieu Wyart. Scaling description of generalization with number of parameters in deep learning. Preprint, available at arXiv:1901.01608, 2019.
 
 \item Mario Geiger, Stefano Spigler, St\'ephane d'Ascoli, Levent Sagun, Marco Baity-Jesi, Giulio Biroli, Matthieu Wyart. The jamming transition as a paradigm to understand the loss landscape of deep neural networks. Preprint, available at arXiv:1809.09349, 2018.
@@ -129,7 +131,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item Over-paramertrization in NNs: observations and a definition, Theoretical Physics for Machine Learning, Aspen Center for Physics, January 2019 \\
+\item An overview of empirical studies in neural networks, The Rough High-Dimensional Landscape Problem, KITP, Santa Barbara, January 2019 \\
+Over-paramertrization in NNs: observations and a definition, Theoretical Physics for Machine Learning, Aspen Center for Physics, January 2019 \\
 A jamming transition from under- to over-parametrization affects loss landscape and generalization, NeurIPS Workshop on Integration of Deep Learning Theories, Montreal, December 2018 \\
 Over-paramertrization in NNs: observations and a definition, Google Brain, Montreal, November 2018 \\
 Over-paramertrization in NNs: observations and a definition, FAIR, Montreal, November 2018 \\
@@ -183,7 +186,9 @@ Independent Study on Dynamical Systems, Bo\u{g}azi\c{c}i University, Summer 2009
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \vspace{-0.5em}
 \section*{Teaching Experience}
+% \vspace{-0.5em}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 \item Recitation leader, Statistical and Mathematical Methods, NYU - Center for Data Science, Fall 2016 \\ 
@@ -198,7 +203,9 @@ Teaching Assistant for Statistics and Probability, Bo\u{g}azi\c{c}i University, 
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% \vspace{-0.5em}
 \section*{Honors, Awards \& Fellowships}
+% \vspace{-0.5em}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
 \item MacCracken Fellowship, New York University, 2011-2016 \\
@@ -212,7 +219,9 @@ Honorable Mention, 9$^{th}$ National Mathematical Olympiads, Akdeniz University,
 Silver Medal, 5$^{th}$ National Mathematical Olympiads for Junior High School Students, T\"{U}B\.{I}TAK, 2001
 \end{itemize}
 
+% \vspace{-0.5em}
 \section*{References}
+% \vspace{-0.5em}
 
 \subsection*{Research}
 
@@ -234,7 +243,7 @@ Laboratoire de Physique Statistique, \'Ecole Normale Sup\'erieure, PSL Research 
 \textit{Relationship:} Postdoc advisor
 
 \end{itemize}
-
+% \vspace{-0.5em}
 \subsection*{Teaching}
 
 \begin{itemize}
@@ -249,10 +258,10 @@ Courant Institute of Mathematical Science and Center for Data Science NYU \\
 % \subsubsection*{Contact}
 
 % Footer
-\begin{center}
-  \begin{footnotesize}
-    Last updated: \today
-  \end{footnotesize}
-\end{center}
+% \begin{center}
+%   \begin{footnotesize}
+%     Last updated: \today
+%   \end{footnotesize}
+% \end{center}
 
 \end{document}
