Updates from Overleaf

--- a/CV-LeventSagun.tex
+++ b/CV-LeventSagun.tex
@@ -81,6 +81,9 @@
 \section*{Papers}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{enumerate}
+
+\item Umut Simsekli, Levent Sagun, Mert Gurbuzbalaban. A Tail-Index Analysis of Stochastic Gradient Noise in Deep Neural Networks. ICML 2019, available at arXiv:1901.06053, 2019.
+
 \item Stefano Spigler, Mario Geiger, St\'ephane d'Ascoli, Levent Sagun, Giulio Biroli, Matthieu Wyart. A jamming transition from under- to over-parametrization affects loss landscape and generalization. Integration of Deep Learning Theories Workshop at NeurIPS, 2018.
 
 \item David Lopez-Paz, Levent Sagun. Easing non-convex optimization with neural networks. Workshop Track at ICLR, 2018.
@@ -106,8 +109,6 @@
 \section*{Preprints}
 \begin{enumerate}
 
-\item Umut Simsekli, Levent Sagun, Mert Gurbuzbalaban. A Tail-Index Analysis of Stochastic Gradient Noise in Deep Neural Networks. Preprint, available at arXiv:1901.06053, 2019.
-
 \item Mario Geiger, Arthur Jacot, Stefano Spigler, Franck Gabriel, Levent Sagun, St\'ephane d'Ascoli, Giulio Biroli, Cl\'ement Hongler, Matthieu Wyart. Scaling description of generalization with number of parameters in deep learning. Preprint, available at arXiv:1901.01608, 2019.
 
 \item Mario Geiger, Stefano Spigler, St\'ephane d'Ascoli, Levent Sagun, Marco Baity-Jesi, Giulio Biroli, Matthieu Wyart. The jamming transition as a paradigm to understand the loss landscape of deep neural networks. Preprint, available at arXiv:1809.09349, 2018.
@@ -131,7 +132,12 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{itemize}
-\item An overview of empirical studies in neural networks, The Rough High-Dimensional Landscape Problem, KITP, Santa Barbara, January 2019 \\
+\item The role of over-parametrization in NNs, Theory Reading Group at MILA, Montreal, April 2019 \\
+The role of over-parametrization in NNs, NYU Shanghai, Shanghai, April 2019 \\
+The role of over-parametrization in NNs, Theory Reading Group at University of Basel, March 2019 \\
+The role of over-parametrization in NNs, Facebook AI Research, New York, February 2019 \\
+The role of over-parametrization in NNs, phys4ML talk at Google X, February 2019 \\
+An overview of empirical studies in neural networks, The Rough High-Dimensional Landscape Problem, KITP, Santa Barbara, January 2019 \\
 Over-paramertrization in NNs: observations and a definition, Theoretical Physics for Machine Learning, Aspen Center for Physics, January 2019 \\
 A jamming transition from under- to over-parametrization affects loss landscape and generalization, NeurIPS Workshop on Integration of Deep Learning Theories, Montreal, December 2018 \\
 Over-paramertrization in NNs: observations and a definition, Google Brain, Montreal, November 2018 \\
